<resources>
    <string name="app_name">News</string>
    <string name="good_morning_fragment_home">Good Morning</string>
    <string name="date_fragment_home">Sat 14 September, 2024</string>
    <string name="weather_fragment_home">Sunny 32°C</string>
    <string name="weather_emoji_fragment_home">☀️</string>
    <string name="article_title_fragment_home">Experience the Serenity of Japan\'s Traditional Countryside</string>
    <string name="item_article_card_section">Technology</string>
    <string name="just_for_you">Just For You</string>
    <string name="see_more_fragment_home">See More</string>
    <string name="article_text">Forests are one of the most important natural resources that our planet possesses. Not only do they provide us with a diverse range of products such as timber, medicine, and food, but they also play a vital role in mitigating climate change and maintaining the overall health of our planet\'s ecosystems. In this article, we will explore the ways in which forests are helping our world. One of the most important roles that forests play is in absorbing carbon dioxide from the atmosphere. Trees absorb carbon dioxide through photosynthesis and store it in their trunks, branches, and leaves. This carbon sequestration helps to mitigate climate change by reducing the amount of greenhouse gases in the atmosphere. Forests are estimated to absorb approximately 2.4 billion tonnes of carbon dioxide each year, which is equivalent to around 10% of global greenhouse gas emissions. Forests also play a crucial role in maintaining the water cycle. Trees absorb water from the soil and release it back into the atmosphere through a process known as transpiration. This helps to regulate the local climate and prevents soil erosion and flooding. Forests also act as natural water filters, helping to purify water that flows through them. Forests are also important sources of biodiversity. They provide habitat for countless species of plants and animals, many of which are found nowhere else on earth. Forests also provide a source of food and medicine for many communities around the world. In fact, it is estimated that around 80% of the world\'s population relies on traditional medicine derived from plants, many of which are found in forests. In addition to their ecological and cultural importance, forests also provide economic benefits. They provide jobs and income for millions of people around the world, particularly in rural areas. Forests also provide timber, paper, and other products that are essential to many industries.</string>
    <string name="article_title">See How the Forest is Helping Our World</string>
    <string name="article_information">Harry Harper · Apr 12, 2023</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="explore_title">Explore</string>
    <string name="chip_group_travel">Travel</string>
    <string name="explore_chip_technology">Technology</string>
    <string name="explore_chip_business">Business</string>
    <string name="explore_chip_entertainment">Entertainment</string>
    <string name="tv_article_title">Uncovering the Hidden Gems of the Amazon Forestarticle_title_fragment_home</string>
    <string name="explore_article_information">Mr. Lana Kub · May 1, 2023</string>
    <string name="item_article_bookmark_information">Travel</string>
    <string name="item_article_explore_information">Harry Harper · Apr 12, 2023</string>
</resources>