<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_explore"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_explore"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:background="@color/fragment_top_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/explore_title"
        android:textColor="@color/fragment_title"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_explore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:iconifiedByDefault="true"
        android:layoutDirection="rtl"
        android:paddingEnd="32dp"
        android:searchIcon="@drawable/ic_search_fragment_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view_explore"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_article"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_explore">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:fontFamily="@font/inter_semibold"
            android:freezesText="false"
            android:text="@string/chip_group_travel"
            android:textColor="@color/explore_chip_text"
            android:textSize="14sp"
            app:chipCornerRadius="56dp"
            app:chipEndPadding="24dp"
            app:chipMinHeight="32dp"
            app:chipMinTouchTargetSize="32dp"
            app:chipStartPadding="24dp"
            app:chipStrokeColor="@color/explore_chip_stroke"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp"
            tools:ignore="SmallSp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:fontFamily="@font/inter_semibold"
            android:freezesText="false"
            android:text="@string/explore_chip_technology"
            android:textColor="@color/explore_chip_text"
            android:textSize="14sp"
            app:chipCornerRadius="56dp"
            app:chipEndPadding="24dp"
            app:chipMinHeight="32dp"
            app:chipMinTouchTargetSize="32dp"
            app:chipStartPadding="24dp"
            app:chipStrokeColor="@color/explore_chip_stroke"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp"
            tools:ignore="SmallSp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:fontFamily="@font/inter_semibold"
            android:freezesText="false"
            android:text="@string/explore_chip_business"
            android:textColor="@color/explore_chip_text"
            android:textSize="14sp"
            app:chipCornerRadius="56dp"
            app:chipEndPadding="24dp"
            app:chipMinHeight="32dp"
            app:chipMinTouchTargetSize="32dp"
            app:chipStartPadding="24dp"
            app:chipStrokeColor="@color/explore_chip_stroke"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp"
            tools:ignore="SmallSp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:fontFamily="@font/inter_semibold"
            android:freezesText="false"
            android:text="@string/explore_chip_entertainment"
            android:textColor="@color/explore_chip_text"
            android:textSize="14sp"
            app:chipCornerRadius="56dp"
            app:chipEndPadding="24dp"
            app:chipMinHeight="32dp"
            app:chipMinTouchTargetSize="32dp"
            app:chipStartPadding="24dp"
            app:chipStrokeColor="@color/explore_chip_stroke"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp"
            tools:ignore="SmallSp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_article"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_article"
        tools:ignore="NotSibling">

        <ImageView
            android:id="@+id/iv_item_article_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/article_card_5" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_article_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tv_article_title"
        android:textColor="@color/explore_article_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/iv_author_portrait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_article"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/iv_author_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/author_round"
        android:contentDescription="null"
        android:src="@drawable/author_card_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_article_title" />

    <TextView
        android:id="@+id/article_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/explore_article_information"
        android:textColor="@color/article_tv_information"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/iv_author_portrait"
        app:layout_constraintTop_toBottomOf="@id/tv_article_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_articles_explore"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:scrollbarSize="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_author_portrait"
        app:layout_constraintVertical_bias="0.021"
        tools:context=".presentation.ui.main_activity.MainActivity"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_article_fragment_explore" />

</androidx.constraintlayout.widget.ConstraintLayout>