<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_article_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:src="@drawable/article_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cv_article_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/article_iv_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_article_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginTop="240dp"
        android:paddingStart="32dp"
        android:paddingTop="24dp"
        android:paddingEnd="32dp"
        android:text="@string/article_title"
        android:textColor="@color/article_tv_title"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_author_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/author_round"
        android:src="@drawable/article_author_portrait"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_article_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_information"
        android:textSize="12sp"
        android:textColor="@color/article_tv_information"
        android:fontFamily="@font/inter_medium"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@id/iv_author_portrait"
        app:layout_constraintTop_toBottomOf="@id/tv_article_title" />

    <TextView
        android:id="@+id/tv_article_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather"
        android:lineSpacingMultiplier="1.5"
        android:paddingStart="32dp"
        android:paddingTop="24dp"
        android:paddingEnd="32dp"
        android:text="@string/article_text"
        android:textColor="@color/article_tv_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_author_portrait" />
</androidx.constraintlayout.widget.ConstraintLayout>